refactored code, no markers yet but push req from Howard

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,9 @@
 		<script
       		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu0o404XjMM1Cf0xxSys43FQf8BrmEGS8&callback=init">
 		</script>
-		<script src="../js/db.js"></script>
-		<script src="../js/index-nonjsx.js"></script>
+		<script src="../js/vdb.js"></script>
+		<script src="../js/react_filter.js"></script>
+		<script src="../js/react_googlemap.js"></script>
+		<script src="../js/index.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
 </html>
