--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,6 +17,7 @@
 		<script src="../js/vdb.js"></script>
 		<script src="../js/react_filter.js"></script>
 		<script src="../js/react_googlemap.js"></script>
+		<script src="../js/react_table.js"></script>
 		<script src="../js/index.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/index.css">
 </html>
