--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,6 +14,7 @@
       		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAu0o404XjMM1Cf0xxSys43FQf8BrmEGS8&callback=init">
 		</script>
 		<script src="../js/vdb.js"></script>
+		<script src="../js/react_form.js"></script>
 		<script src="../js/react_filter.js"></script>
 		<script src="../js/react_googlemap.js"></script>
 		<script src="../js/react_table.js"></script>
